<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Run</string>
    <string name="history">历史</string>
    <string name="historyRecord">历史记录</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="startCalTime">开始计时</string>
    <string name="stopCalTime">停止计时</string>
    <string name="currentSpeed">当前速度:</string>
    <string name="costHeat">消耗热量:</string>
    <string name="heavyError">体重过轻\n请到设置中设置体重</string>
    <string name="hello_world">Hello world!</string>
    <string name="backpressed">程序正在运行\n若想返回桌面，请按主页（Home）键\n若想退出程序，请先“停止计时”或通过菜单里的“退出”</string>
    <string name="GPSAlertTitle">您的GPS定位未开启</string>
    <string name="GPSAlertMessage">点击设置开启GPS，点击取消退出程序</string>
    <string name="cheat">程序检测到你试图通过了作弊手段想开启彩蛋，休想！~</string>
    <string name="connecting">正在联网获取天气…</string>
    <string name="zero">00:00:00</string>

    <!-- FirstRunActivity 中 -->
    <string name="firstText">Let\'s enjoy!!!</string>
    <string name="firstEditHint">请输入体重(单位:kg)</string>
    <string name="setHeavyError">体重设置错误，请到设置中重新设置!</string>
    
    <!-- SettingsActivity 中 -->
    <string name="statistics">统计概览</string>
    <string name="allMile">运动总里程：</string>
    <string name="allHeat">消耗总热量：</string>
    <string name="allTime">运动总时长：</string>
    <string name="setHeavy">设置体重</string>
    <string name="clearHistory">清空历史记录</string>
    <string name="textView_hint">0</string>
    <string name="contentDescription">content</string>

    <!-- AboutActivity 中 -->
    <string name="copyright">©copyright @nuist邬晨崴，万能  @TKK 韩小迪</string>
    <string name="thank_open_source">致谢及开源许可</string>

    <!-- ThanksActivity -->
    <string name="line10">气象信息来源</string>
    <string name="line11">中国气象局以及天气预报 Web服务\nhttp://www.webxml.com.cn/</string>
    <string name="line1">Thanks</string>
    <string name="line2">Nuist-万能           TKK-韩小迪</string>
    <string name="line3">Open source licenses</string>
    <string name="line4">ViewPagerIndicator</string>
    <string name="line5">Copyright 2012 Jake Wharton \nViewPagerIndicator is licensed under the Apache License Version 2.0</string>
    <string name="line6">ActionBarSherlock</string>
    <string name="line7">Copyright 2012 Jake Wharton \nActionBarSherlock is licensed under the Apache License Version 2.0</string>
    <string name="line8">The Apache License Version 2.0</string>
    <string name="line9">
        you may not use this file except in compliance with the License.
		You may obtain a copy of the License at \nhttp://www.apache.org/licenses/LICENSE-2.0\n
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License.
	</string>
	
    <!-- CaidanActivity -->
    <string name="caidan_Label">彩蛋</string>

</resources>