<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e1e1e1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#dddddd"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/statistics"
            android:textColor="#000000" />

        <ImageView
            android:contentDescription="@string/contentDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/currentMoney"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/shape_top" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/allMile"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/allMile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/textView_hint"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/aboutMoney"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/shape_middle" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/allHeat"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/allHeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/textView_hint"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/getMoney"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/shape_bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/allTime"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/allTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/textView_hint"
                android:textColor="#000000" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/settings"
            android:textColor="#000000" />

        <ImageView
            android:contentDescription="@string/contentDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/setheavy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/shape_top" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setHeavy"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clearHistory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/shape_bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clearHistory"
                android:textColor="#000000" />
        </RelativeLayout>

        <ImageView
            android:contentDescription="@string/contentDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/setHeavySeekBarLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:visibility="invisible"
            android:background="@drawable/shape" >

            <SeekBar
                android:id="@+id/setHeavySeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:max="150"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>